[tool.poetry]
name = "nursepy"
version = "0.1.0"
description = "Python package for EDA and preprocessing"
authors = ["Group 24"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
pandas = "^1.0.1"
altair = "^4.0.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
numpy = "^1.18.1"
sklearn = "^0.0"
pandas = "^1.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
