[tool.poetry]
name = "nursepy"
version = "0.1.3"
description = "Python package for EDA and preprocessing"
authors = ["Group 24"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
pandas = "^1.0.1"
altair = "3.2.0"
sklearn = "^0.0"
pytest = "^5.3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
numpy = "^1.18.1"
sklearn = "^0.0"
pandas = "^1.0.1"
sphinx = "^2.4.3"
sphinxcontrib-napoleon = "^0.7"
pytest-cov = "^2.8.1"
codecov = "^2.0.16"
flake8 = "^3.7.9"
autopep8 = "^1.5"
python-semantic-release = "^4.10.0"

[tool.semantic_release]
version_variable = "nursepy/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


